# creeps

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  railway.toml  tsconfig.json
.github/workflows/: release-client.yml
.grok/skills/realm-rust/: SKILL.md
crates/realm-client/: Cargo.toml
crates/realm-client/src/: app.rs  config.rs  main.rs  plain.rs  tui.rs
crates/realm-core/: Cargo.toml
crates/realm-core/migrations/: 001_init.sql
crates/realm-core/src/: achievement_service.rs  achievements.rs  admin.rs  backup.rs  combat.rs  commands.rs  db.rs  duel.rs  events.rs  guilds.rs  items.rs  lib.rs  minimap.rs  party.rs  player.rs  pool.rs  quests.rs  social.rs  trade.rs  types.rs  world.rs
crates/realm-game/: Cargo.toml
crates/realm-game/src/: colony_dir.rs  console.rs  main.rs  source_ui.rs
crates/realm-protocol/: Cargo.toml
crates/realm-protocol/src/: colony.rs  lib.rs
crates/realm-sdk/: Cargo.toml
crates/realm-sdk/src/: lib.rs
crates/realm-server/: Cargo.toml
crates/realm-server/src/: main.rs  server.rs
crates/realm-sim/: Cargo.toml
crates/realm-sim/src/: constants.rs  creep.rs  lib.rs  room.rs  snapshot.rs  structure.rs  tick.rs  world.rs
scripts/: install.ps1  install.sh
src/client/: index.ts  neo-blessed.d.ts  plain.ts  tui.ts
src/data/: world.json
src/db/: backup.ts  database.ts
src/game/: achievement-service.ts  achievements.ts  admin.ts  combat.ts  commands.ts  duel.ts  events.ts  guilds.ts  items.ts  minimap.ts  party.ts  player.ts  quests.ts  social.ts  trade.ts  types.ts  world.ts
src/protocol/: messages.ts
src/server/: game-server.ts  index.ts
