[workspace]
resolver = "2"
members = [
    "crates/realm-protocol",
    "crates/realm-core",
    "crates/realm-sim",
    "crates/realm-sdk",
    "crates/realm-server",
    "crates/realm-client",
    "crates/realm-game",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Creeps — Screeps for Rust (sandbox colony MMO)"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "migrate"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
realm-protocol = { path = "crates/realm-protocol" }
realm-core = { path = "crates/realm-core" }
realm-sim = { path = "crates/realm-sim" }
realm-sdk = { path = "crates/realm-sdk" }