[package]
name = "realm-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "realm-server"
path = "src/main.rs"

[dependencies]
realm-core = { workspace = true }
realm-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["trace"] }
dotenvy = { workspace = true }